--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.11.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-query": "^3.34.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
