--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "my-react-global-states": "^0.0.4",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-pager-view": "^5.4.9",
@@ -20,7 +21,8 @@
     "react-native-screens": "^3.11.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-tab-view": "^3.1.1",
-    "react-query": "^3.34.14"
+    "react-query": "^3.34.14",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
