--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+
+MYAPP_UPLOAD_STORE_FILE=photo-sharing-app.keystore
+MYAPP_UPLOAD_KEY_ALIAS=photo-sharing-app
+MYAPP_UPLOAD_STORE_PASSWORD=asdasd
+MYAPP_UPLOAD_KEY_PASSWORD=asdasd
