--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "my-react-global-states": "^0.0.4",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-fs": "^2.18.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
