--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-query": "^3.34.14",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "underscore": "^1.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
